--- a/frontend_templates/info/home.html
+++ b/frontend_templates/info/home.html
@@ -7,17 +7,17 @@
 
 {% block content %}
   <header>
-    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+    <div class="carousel slide main-section" data-ride="carousel">
       <div class="carousel-inner" role="listbox">
-        <div class="carousel-item active" style="background-color: #7373fd">
+        <div class="carousel-item active">
           <div class="image-box">
-          <div class="image-title">
+            <div class="image-title"> 
               <h1>Join the Interview <br/> Question Revolution</h1>
               <p>Stop using low signal algorithm interview questions. Interview like you were doing a job.</p>
             </div>
           </div>
           <a class="image-button" href="/users/signup">Sign Up</a>
-          <img class="image-screenshot" src="{% static 'images/screenshot.png' %}" alt="" width="400" height="400">
+          <img class="image-screenshot" src="{% static 'images/screenshot.png' %}" alt="" width="500" height="500">
         </div>
       </div>
     </div>
@@ -28,13 +28,13 @@
     
     <!-- About -->
     <div class="row">
-      <div class="col-lg-6 mb-6">
+      <div class="col-lg-6 mb-6 left-section">
         <div class="about-section">
           <h3 class="about-section-header">Do Interviews That Matter</h3>
           <p class="about-section-text">Stop wasting your time doing algorithm interviews. You have spent your career creating impressive personal projects, tackling difficult challenges, and having invaluable industry experience. Your next programming opportunity will allow you to grow and develop even more. There’s only one problem that is stopping you from this dream job. Your college algorithms class. Do problems that you will encounter in the real world.</p>
         </div>
       </div>
-      <div class="col-lg-6 mb-6">
+      <div class="col-lg-6 mb-6 right-section">
           <div class="about-section">
             <h3 class="about-section-header">Prepare For Your Job. For Real.</h3>
             <p class="about-section-text">It’s no secret that your job most likely won’t be coming up and implementing creative ways to find the longest palindrome substring. You are going to be a given a code base and a prompt and you need to get going. Practice designing and implementing real systems.</p>
@@ -42,7 +42,7 @@
       </div>
     </div>
     <div class="open-questions">
-      <h1 class="open-questions-title">Explore Open Questions</h1>
+      <h1 class="open-questions-title">Explore Example Questions</h1>
       <!-- Marketing Icons Section -->
         <div class="row">
           <div class="col-lg-4 mb-4">
