--- a/frontend_templates/interview_q_instance/browse.html
+++ b/frontend_templates/interview_q_instance/browse.html
@@ -5,15 +5,11 @@
 {% endblock %}
 
 {% block content %}
-<div class="container" style="padding-top: 70px; max-width: 90vw;">
+<div class="container main-section">
     <div class="row">
         <div class="col-sm-12">
              {% if user %}
-                <section class="jumbotron text-center">
-                <div class="container">
-                    <h1 class="jumbotron-heading">Interview Questions Unanswered:</h1>
-                </div>
-                </section>
+                <h1 class="page-heading">Interview Questions Unanswered:</h1>
         
                 <div class="album py-5 bg-light">
                 <div class="container">
