--- a/frontend_templates/base.html
+++ b/frontend_templates/base.html
@@ -25,7 +25,10 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-              <a class="nav-link" href="/about">About</a>
+              <a class="nav-link" href="/our-solution">Our Solution</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/about">About Us</a>
             </li>
             {% if user.is_authenticated %}
               <li class="nav-item dropdown">
