--- a/frontend_templates/info/about.html
+++ b/frontend_templates/info/about.html
@@ -8,26 +8,34 @@
 {% block content %}
 <div class="main-body">
       <div class="container">
-        <hr>
-        <div class="row">
-          <div class="col-md-7">
-            <h2 class="section-header">About Us</h2>
-            <p class="section-body">Encompass Interviews is an online platform leading the charge to change the way technical programming interview questions are done. We believe that thee current way that programming interviews are done, primarily through algorithm based interviews, do not stress skills that are important in an actually programming job. This leads to low signal for the company and high stress for the applicant. We do this by . By offering different questions on our platform, we are taking the first step to allowing people’s dreams to become true.
-            </p>
-          </div>
-          <div class="col-md-5">
-            <img class="about-icon" src="{% static 'images/icon.png' %}" width="250" height="250">
-          </div>
-        </div>
-
-        <hr>
-
         <div class="row">
           <div class="col-md-12 order-md-12">
             <h2 class="mission-header">Our Mission</h2>
             <p class="mission-body">Maximize the alignment of developers’ skills and opportunities</p>
           </div>
         </div>
+        <hr>
+        <div class="row">
+          <div class="col-md-8">
+            <h2 class="section-header">About Us</h2>
+            <p class="section-body">Encompass Interviews is an online platform leading the charge to change the way technical programming interview questions are done. We believe that thee current way that programming interviews are done, primarily through algorithm based interviews, do not stress skills that are important in an actually programming job. This leads to low signal for the company and high stress for the applicant. We do this by . By offering different questions on our platform, we are taking the first step to allowing people’s dreams to become true.
+            </p>
+          </div>
+          <div class="col-md-4">
+            <img class="about-icon" src="{% static 'images/icon.png' %}" width="250" height="250">
+          </div>
+        </div>
+        <hr>
+          <div class="row">
+            <div class="col-md-12">
+              <h2 class="section-header">The Team</h2><br/>
+            </div>
+            <div class="col-lg-3 person-block">
+              <img class="rounded-circle person-image" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140">
+              <h2 class="person-title">Mike</h2>
+              <p class="person-text">Mike is a engineering and business student at Upenn.</p>
+            </div>
+          </div>
       </div>
 </div>
 {% endblock %}
