--- a/frontend_templates/interview_q_instance/browse.html
+++ b/frontend_templates/interview_q_instance/browse.html
@@ -9,9 +9,7 @@
     <div class="row">
         <div class="col-sm-12">
              {% if user %}
-                <h1 class="page-heading">Interview Questions Unanswered:</h1>
-        
-                <div class="album py-5 bg-light">
+                <h1 class="page-title">Interview Questions Unanswered:</h1>
                 <div class="container">
                     <div class="row">
                         {% for question in questions %}
