finish frontend start validation

--- a/frontend_templates/info/about.html
+++ b/frontend_templates/info/about.html
@@ -26,16 +26,26 @@
           </div>
         </div>
         <hr>
-          <div class="row">
-            <div class="col-md-12">
-              <h2 class="section-header">The Team</h2><br/>
-            </div>
-            <div class="col-lg-3 person-block">
-              <img class="rounded-circle person-image" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140">
-              <h2 class="person-title">Mike</h2>
-              <p class="person-text">Mike is a engineering and business student at Upenn.</p>
-            </div>
+        <div class="row">
+          <div class="col-md-12">
+            <h2 class="section-header">The Team</h2><br/>
           </div>
-      </div>
+          <div class="col-lg-3 person-block">
+            <img class="rounded-circle person-image" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140">
+            <h2 class="person-title">Mike</h2>
+            <p class="person-text">Mike is a engineering and business student at Upenn.</p>
+          </div>
+        </div>
+        <hr />
+        <div class="row">
+          <div class="col-md-12">
+            <h2 class="section-header">Contact Us</h2>
+            <p class="section-body">contact us.
+            </p>
+          </div>
+        </div>
+
+
+    </div>
 </div>
 {% endblock %}
