--- a/frontend_templates/registration/login.html
+++ b/frontend_templates/registration/login.html
@@ -11,6 +11,9 @@
       {% csrf_token %}
       <img class="d-block mx-auto mb-4" src="{% static 'images/icon.png' %}" alt="" width="72" height="72">
       <h1 class="h3 mb-3 font-weight-normal">SIGN IN</h1>
+      {% if invalid_login %}
+        <h4 style="color: red">Invalid email/password combination</h4>
+      {% endif %}
       <label for="email" class="sr-only">Email address</label>
       <input type="email" id="email" name="email" class="form-control" placeholder="Email address" required autofocus><br />
       <label for="password" class="sr-only">Password</label>
