--- a/frontend_templates/registration/signup.html
+++ b/frontend_templates/registration/signup.html
@@ -11,12 +11,22 @@
       {% csrf_token %}
       <img class="d-block mx-auto mb-4" src="{% static 'images/icon.png' %}" alt="" width="72" height="72">
       <h1 class="h3 mb-3 font-weight-normal">SIGN UP</h1>
+      {% if error_messages %}
+        <h3 style="color: red">Error Signing Up:</h3>
+        <center>
+        <ul style="color: red; list-style: none; padding-inline-start: 0">
+        {% for error_message in error_messages %} 
+          <li> - {{ error_message }}</li>
+        {% endfor %}
+        </ul>
+      </center>
+      {% endif %}
       <label for="email" class="sr-only">Email address</label>
       <input type="email" id="email" name="email" class="form-control" placeholder="Email address" required autofocus><br />
       <label for="password" class="sr-only">Password</label>
       <input type="password" id="password" name="password" class="form-control" placeholder="Password" required><br />
-      <label for="id_password2" class="sr-only">Confirm Password</label>
-      <input type="password" id="id_password2" name="password" class="form-control" placeholder="Confirm Password" required>
+      <label for="password2" class="sr-only">Confirm Password</label>
+      <input type="password" id="password2" name="password2" class="form-control" placeholder="Confirm Password" required>
       <br /><br />
       <button class="btn btn-lg btn-primary btn-block" type="submit">Sign Up</button>
     </form>
