--- a/frontend_templates/interview_q/all.html
+++ b/frontend_templates/interview_q/all.html
@@ -11,8 +11,6 @@
              {% if user.is_authenticated %}
                 <h1 class="page-title">Your Interview Questions:</h1>
                 </section>
-        
-   
                 <div class="container">
                     <div class="row">
                         {% for interview_q in interview_questions %}
@@ -24,6 +22,7 @@
                                         <div class="btn-toolbar">
                                             <a href="/interview_questions/question/{{interview_q.id}}/send/" class="btn btn-outline-primary question-card-button">Send</a>
                                             <a href="/interview_questions/question/{{interview_q.id}}/edit/" class="btn btn-outline-primary question-card-button">Edit</a>
+                                            <a href="/interview_questions/question/{{interview_q.id}}/delete/" class="btn btn-outline-primary question-card-button">Delete</a>
                                         </div>
                                     </div>
                                 </div>
