--- a/frontend_templates/interview_q/create.html
+++ b/frontend_templates/interview_q/create.html
@@ -39,7 +39,7 @@
                                 <option>Python3</option>
                             </select> <br/>
                             <div class="form-check">
-                                <input class="form-check-input" type="checkbox" value="" id="is_open" name="is_open">
+                                <input class="form-check-input" type="checkbox" id="is_open" name="is_open">
                                 <label class="form-check-label checkbox-label" for="is_open">
                                         Make your question open to the public for all users to try?
                                 </label>
