--- a/frontend_templates/interview_q/create.html
+++ b/frontend_templates/interview_q/create.html
@@ -188,6 +188,9 @@
                     </div>
                     <div class="col-md-6">
                         <p class="step-description">In this step, you provide test cases.
+                            When importing a file do <br />
+                            import file<br />
+                            file.function
                         </p>
                     </div>
                 </div>
