--- a/frontend_templates/interview_q/question.html
+++ b/frontend_templates/interview_q/question.html
@@ -196,7 +196,25 @@
                             </div>
                         </div>
                         <div class="col-md-6">
-                            <p class="step-description">In this step, you provide test cases.
+                            <p class="step-description">In this step, you provide test cases. An example is below:
+                                <div style="background: #ffffff; overflow:auto;width:auto;border:solid gray;border-width:.1em .1em .1em .8em;padding:.2em .6em;" id="test_case_example">
+                                    <pre style="margin: 0; line-height: 125%"><span style="color: #008000"># this unittest import is needed</span>
+<span style="color: #0000ff">import</span> unittest
+
+<span style="color: #0000ff">import</span> user_submitted_file
+<span style="color: #008000"># indicate the visibility of your test 
+to the user with a @visible @not_visible annotation</span>
+
+<span style="color: #008000"># all test cases should be written in this class</span>
+<span style="color: #0000ff">class</span> <span style="color: #2b91af">TestCases</span>(unittest.TestCase):
+    @visible
+    <span style="color: #0000ff">def</span> test_user_submitted_file():
+        <span style="color: #0000ff">assert</span> user_submitted_file.custom_function() == 5
+
+    @not_visible
+    <span style="color: #0000ff">def</span> test_user_submitted_file_two():
+        <span style="color: #0000ff">assert</span> user_submitted_file.custom_function() != 5
+</pre></div>
                             </p>
                         </div>
                     </div>
